# TranscriptionGUI

./: .gitignore  README.md  download_models.py  main.py  pyproject.toml  utils.py
configs/: flake8.cfg  mypy.cfg
