[project]
name = "transcriptiongui"
version = "0.1.0"
description = ""
authors = [
    {name = "b-kostenko", email = "bogdankostenko83@gmail.com"},
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper (>=1.2.0,<2.0.0)",
    "huggingface-hub[hf-xet] (>=0.35.1,<0.36.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

