[tool.poetry]
name = "transcriptiongui"
version = "0.1.0"
description = "GUI for transcription"
authors = ["b-kostenko bogdankostenko83@gmail.com"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
faster-whisper = ">=1.2.0,<2.0.0"
huggingface-hub = {version = ">=0.35.1,<0.36.0", extras = ["hf-xet"]}



